# doc2query

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  doc2query_research.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
configs/data/: bielik_tokenizers.yaml  (+3 more)
docs/: doc2query_conceptual_review.md  plan_poprawek_po_audytach.md  task01_data_pipeline.md  task02_rerankers.md  task03_sft_qlora.md  task04_evaluation.md
scripts/: adapt_msmarco_pl.py  assign_focus_labels.py  benchmark_rerankers.py  bootstrap_gpu_env.sh  build_corpus_index.py  build_data_report.py  build_document_index.py  build_false_negative_calibration.py  build_report.py  build_splits.py  calibrate_reranker.py  calibrate_rewards.py  compare_evaluations.py  compare_sft_runs.py  deduplicate_documents.py  evaluate_generator.py  freeze_evaluation_sets.py  freeze_native_pl_holdout.py  freeze_train_corpus.py  generate_panel.py  human_evaluation.py  invert_doc2query_pairs.py  p03_w05_sensitivity.py  precompute_text_analysis.py  run_base_1_5b_campaign.sh  run_memory_probe.py  run_overnight_4_5b.sh  run_p03_w05_sensitivity.sh  run_w06_evaluation.sh  run_weekend_sft.sh  score_false_negative_calibration.py  score_query_passages.py  train_probe_embedder.py  train_sft.py  validate_dataset.py  watch_overnight_4_5b.sh
tasks/: 00_repository_bootstrap.md  01_data_contract_audit_and_splits.md  02_reranker_and_reward_proxies.md  03_sft_qlora_baselines.md  04_evaluation_harness.md  05_controlled_diversity_and_multiquery.md  06_candidate_scoring_and_preference_data.md  07_dpo_training.md  08_grpo_multiobjective_rl.md  09_experiment_campaign.md  10_final_scaleup_inference_release.md  11_optional_alternating_cotraining.md  README.md
tests/: test_base_campaign.py  test_calibration.py  test_cli.py  test_config.py  test_data_pipeline.py  test_evaluation.py  test_false_negative_calibration.py  test_hardware.py  test_imports.py  test_msmarco_adapter.py  test_native_holdout.py  test_p03_sensitivity.py  test_probe_negatives.py  test_reproducibility.py  test_reranker.py  test_task02_holdout.py  test_text_analysis.py  test_tracking.py  test_training_sft.py
(+154 files in other folders)
