[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bielik-doc2query"
version = "0.1.0"
description = "Reproducible Polish doc2query research pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary - research project" }
authors = [{ name = "doc2query contributors" }]
dependencies = [
  "hydra-core>=1.3.2,<1.4",
  "omegaconf>=2.3,<2.4",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0.2,<7",
  "rich>=13.9,<15",
  "typer>=0.15,<1",
]

[project.scripts]
doc2query = "doc2query.cli:app"

[project.optional-dependencies]
inference = [
  "onnxruntime>=1.20,<2",
  "optimum>=1.24,<3",
  "openvino>=2025.0,<2027",
]
fast-generation = ["vllm>=0.8,<1"]
flash-attention = ["flash-attn>=2.7,<3"]

[dependency-groups]
data = [
  "datasets>=3.2,<5",
  "datasketch>=1.6.5,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<4",
  "pyarrow>=18,<24",
  "scikit-learn>=1.6,<2",
  "xxhash>=3.5,<4",
]
training = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "peft>=0.14,<1",
  "torch>=2.5,<3",
  "transformers>=4.47,<6",
  "trl>=0.13,<1",
]
retrieval = [
  "ranx>=0.3.20,<1",
  "sentence-transformers>=3.3,<6",
]
nlp = ["spacy>=3.8,<4"]
evaluation = [
  "sacrebleu>=2.5,<3",
  "scipy>=1.14,<2",
  "statsmodels>=0.14,<1",
]
tracking = ["wandb>=0.19,<1"]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/doc2query"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = ["gpu: test requiring a CUDA GPU"]
